Fixed word-wrap.

--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@ License URI: http://www.opensource.org/licenses/gpl-license.php GPL v3.0 (or lat
 
 body {
 	color: #555555;
-	-ms-word-break: break-all;
-	word-break: break-all;
+	word-wrap: break-word;
 }
 
 @media screen and (max-width: 767px) {
